--- a/01 - JavaScript Drum Kit/index-Arlin-Finished.html
+++ b/01 - JavaScript Drum Kit/index-Arlin-Finished.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>JS Drum Kit</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <div class="keys">
     <div data-key="65" class="key">
@@ -55,27 +57,30 @@
   <audio data-key="75" src="sounds/tom.wav"></audio>
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
-<script>
-window.addEventListener('keydown', function(e){
-  const audio = document.querySelector(`audio[data-key='${e.keyCode}']`);
-  const key = document.querySelector(`.key[data-key='${e.keyCode}']`);
+  <script>
+    function playSound(e) {
+      const audio = document.querySelector(`audio[data-key='${e.keyCode}']`);
+      const key = document.querySelector(`.key[data-key='${e.keyCode}']`);
+      if (!audio) return;
+      audio.currentTime = 0;
+      audio.play();
+      key.classList.add('playing');
+    }
 
-  if (!audio) return;
-  audio.currentTime = 0;
-  audio.play();
-  key.classList.add('playing');
-});
+    function removeTransition(e) {
+      if (e.propertyName !== 'transform') return;
+      e.target.classList.remove('playing');
+    }
 
-function removeTransition(e){
-  if (e.propertyName !== 'transform') return;
-  e.target.classList.remove('playing');
-}
+    window.addEventListener('keydown', function(e) {
+    });
 
-var keys = document.querySelectorAll('.key');
-keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+    const keys = document.querySelectorAll('.key');
+    keys.forEach(key => key.addEventListener('transitionend', removeTransition));
 
-</script>
-
+    window.addEventListener('keydown', playSound);
+  </script>
 
 </body>
+
 </html>
