--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -15,8 +15,13 @@
     </div>
 
   <script>
+  function getDate() {
     var now = new Date();
-    console.log(now);
+    var seconds = now.getSeconds();
+    console.log(seconds);
+  }
+
+  setInterval(getDate, 1000);
 
   </script>
 </body>
